    now fixed: that data provided to post() is combined with the server's
    response to create a cacheable object whose headers will not be entirely
    accurate. POST is still not cached because CouchDB does not respond with an
    E-tag to cache against. Thanks to Peter Kruithof for reporting and original
    patch. (closes #17)

Version 0.5.0
-------------

Breaking Changes

  * These Sag class functions now return the class's current instance ($this):
    decode, setDatabase, setOpenTimeout, setRWTimeout, setCache,
    setStaleDefault. This allows configuration functions to be chained before
    you make a call to CouchDB. (closes #14)

  * Sag->setDatabase() will now URL encode database names that are passed to
    it. This may break your code if you were already encoding database names
    before passing them. For example,
    `$sag->setDatabase(urlencode('some/db'));` will no longer work as expected.
    Instead use `$sag->setDatabase('some/db');`.

New Features

  * Sag now supports connection pooling for sockets with HTTP's Connection:
    Keep-Alive. This means Sag no longer opens and closes a socket for each
    request made (better performance). No management is provided for the
    maximum number of sockets that can be kept open, since this should be done
    at the operating system level (ulimit or pam for Linux/Unix). (closes #15)

  * Adding support for CouchDB 1.1.x, while dropping support for 0.11.x - most
    of, or all of, 0.11.x will still work with Sag.

  * Added the examples/ directory with an example of how one could store PHP
    session data in CouchDB. Related blog post:
    http://weblog.bocoup.com/storing-php-sessions-in-couchdb

  * Added tests/bootstrap.php to make running the tests easier.

Fixed Bugs

  * All functions that take query parameters as function parameters, such as
    'startkey' in Sag->getAllDocs(), now URL encode those parameters before
    adding them to the URL. However, functions that you pass whole URLs to,