@@ -14,6 +14,10 @@ Fixed Bugs
     E-tag to cache against. Thanks to Peter Kruithof for reporting and original
     patch. (closes #17)
 
+  * setAttachment() now properly URL encodes the ?rev parameter when you
+    specify the document's _rev (last function parameter). Thanks to skyshard
+    for reporting the issue and the fix. (closes #19)
+
 Version 0.5.0
 -------------
 
